--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,6 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
@@ -17,16 +15,21 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
+    "target": "es2017",
+    "module": "es2020",
     "paths": {
-      "@core/*":["src/app/core/*"],
-      "@modules/*":["src/app/modules/*"],
-      "@shared/*":["src/app/shared/*"],
+      "@core/*": [
+        "src/app/core/*"
+      ],
+      "@modules/*": [
+        "src/app/modules/*"
+      ],
+      "@shared/*": [
+        "src/app/shared/*"
+      ]
     },
-    "useDefineForClassFields": false,
     "lib": [
-      "ES2022",
+      "es2018",
       "dom"
     ]
   },
